Test/typing/should_fail/methods_abstract_private.java
package tutu.titi.toto;

abstract class A {

    abstract private void myMethod(){}

}